# ocaml-ctypes

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  WORKSPACE.bzl  log.coswitch
.config/: coswitch_registry.bazelrc  overrides.bazelrc  registries.bazelrc
examples/: BUILD.bazel
examples/cstubs_structs/: BUILD.bazel
examples/date/: BUILD.bazel
examples/date/foreign/: BUILD.bazel
examples/date/stub-generation/: BUILD.bazel
examples/date/stub-generation/bindings/: BUILD.bazel
examples/date/stub-generation/stub-generator/: BUILD.bazel
examples/fts/: BUILD.bazel
examples/fts/foreign/: BUILD.bazel
examples/fts/stub-generation/: BUILD.bazel
examples/fts/stub-generation/bindings/: BUILD.bazel
examples/fts/stub-generation/stub-generator/: BUILD.bazel
examples/ncurses/: BUILD.bazel
examples/ncurses/foreign/: BUILD.bazel
examples/ncurses/stub-generation/: BUILD.bazel
examples/ncurses/stub-generation/bindings/: BUILD.bazel
examples/ncurses/stub-generation/stub-generator/: BUILD.bazel
examples/sigset/: BUILD.bazel
src/: BUILD.bazelX
src/configure/: BUILD.bazel
src/cstubs/: BUILD.bazel
src/ctypes/: BUILD.bazel
src/ctypes-foreign/: BUILD.bazel  dune  libffi_abi.macos_arm.ml
src/ctypes-top/: BUILD.bazel
tests/: BUILD.bazel
tests/bench-micro/: BUILD.bazel
tests/clib/: BUILD.bazel
tests/test-alignment/: BUILD.bazel
tests/test-arrays/: BUILD.bazel
tests/test-bigarrays/: BUILD.bazel
tests/test-bools/: BUILD.bazel  test_bools.ml
tests/test-bools/stub-generator/: BUILD.bazel
tests/test-bools/stubs/: BUILD.bazel
tests/test-builtins/: BUILD.bazel
tests/test-callback_lifetime/: BUILD.bazel
tests/test-closure-type-promotion/: BUILD.bazel
tests/test-coercions/: BUILD.bazel
tests/test-complex/: BUILD.bazel
tests/test-constants/: BUILD.bazel
tests/test-constants/stub-generator/: BUILD.bazel
tests/test-cstdlib/: BUILD.bazel
tests/test-custom_ops/: BUILD.bazel
tests/test-enums/: BUILD.bazel
tests/test-enums/struct-stub-generator/: BUILD.bazel
tests/test-enums/struct-stubs/: BUILD.bazel
tests/test-finalisers/: BUILD.bazel
tests/test-foreign-errno/: BUILD.bazel
tests/test-foreign_values/: BUILD.bazel
tests/test-foreign_values/stubs/: BUILD.bazel
tests/test-funptrs/: BUILD.bazel
tests/test-higher_order/: BUILD.bazel
tests/test-integers/: BUILD.bazel
tests/test-ldouble/: BUILD.bazel
tests/test-lifetime/: BUILD.bazel
tests/test-lwt-jobs/: BUILD.bazel
tests/test-lwt-preemptive/: BUILD.bazel
tests/test-macros/: BUILD.bazel
tests/test-marshal/: BUILD.bazel
tests/test-oo_style/: BUILD.bazel
tests/test-passable/: BUILD.bazel
tests/test-passing-ocaml-values/: BUILD.bazel
tests/test-pointers/: BUILD.bazel
tests/test-raw/: BUILD.bazel
tests/test-returning-errno/: BUILD.bazel
tests/test-returning-errno-lwt-jobs/: BUILD.bazel
tests/test-returning-errno-lwt-preemptive/: BUILD.bazel
tests/test-returning-errno/stubs/: BUILD.bazel
tests/test-roots/: BUILD.bazel
tests/test-sizeof/: BUILD.bazel
tests/test-structs/: BUILD.bazel
tests/test-stubs/: BUILD.bazel
tests/test-threads/: BUILD.bazel
tests/test-type_printing/: BUILD.bazel
tests/test-type_printing/stubs/: BUILD.bazel
tests/test-unions/: BUILD.bazel
tests/test-value_printing/: BUILD.bazel
tests/test-variadic/: BUILD.bazel
tests/test-views/: BUILD.bazel
tests/tests-common/: BUILD.bazel
